<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundcalc"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator_app"
        android:textColor="@android:color/black"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/calculator_app1"
        app:srcCompat="@drawable/calculator"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/etFirstno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_first_no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/etSecondno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_second_no"
        android:inputType="numberDecimal"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="34sp" />

    <Button
        android:id="@+id/btPlus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:backgroundTintMode="src_in"
        android:text="@string/plus"
        android:textColor="#4E342E"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btMinus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:backgroundTintMode="src_in"
        android:text="@string/minus"
        android:textColor="@android:color/black"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:backgroundTintMode="src_in"
        android:text="@string/divide"
        android:textColor="@android:color/black"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:backgroundTintMode="src_in"
        android:text="@string/multiply"
        android:textColor="@android:color/black"
        tools:ignore="TextContrastCheck" />

</LinearLayout>